<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Music Library</string>

    <!-- Category name for Top Albums [CHAR LIMIT=20] -->
    <string name="category_top_albums">Top Albums</string>

    <!-- Category name for Top Artists [CHAR LIMIT=20] -->
    <string name="category_top_artists">Top Artists</string>

    <!-- Category name for Top Songs [CHAR LIMIT=20] -->
    <string name="category_top_songs">Top Songs</string>

    <string name="activity_play_song">Play Song</string>

    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="release_year">2018</string>
    <string name="num_of_songs">100</string>
    <string name="age">20</string>
    <string name="hometown">Udacity Town</string>
    <string name="country">USA</string>

    <string name="back_to_list">BACK TO LIST</string>
    <string name="back_to_main">BACK TO MAIN</string>
    <string name="see_album_detail">See Album Detail</string>

    <string name="play_text">PLAY</string>
    <string name="pause_text">PAUSE</string>


</resources>
