<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/album_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/album_name" />

    <TextView
        android:id="@+id/artist_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/artist_name" />

    <TextView
        android:id="@+id/year_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/release_year" />

    <TextView
        android:id="@+id/num_song_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/num_of_songs" />

    <Button
        android:id="@+id/detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_album_detail" />

</LinearLayout>