<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/song_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_padding"
            android:text="@string/song_name"
            android:textSize="@dimen/textview_48_size"/>

        <TextView
            android:id="@+id/artist_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/small_padding"
            android:text="@string/artist_name"
            android:textSize="@dimen/textview_24_size"/>

        <TextView
            android:id="@+id/album_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/small_padding"
            android:text="@string/album_name"
            android:textSize="@dimen/textview_24_size"/>

        <Button
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_padding"
            android:text="@string/pause_text"
            android:textSize="@dimen/textview_24_size"/>

    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_padding"
        android:text="@string/back_to_list"
        android:textSize="@dimen/textview_24_size" />


</RelativeLayout>
